--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.4",
     "babel-plugin-macros": "^3.1.0",
+    "framer-motion": "^10.8.5",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
